// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attributes/attributes.squiffy 1`] = `
"export const story = {};
story.id = "attributes.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Set a start value: <a class=\\"squiffy-link link-section\\" data-section=\\"one\\" role=\\"link\\" tabindex=\\"0\\">1</a> or <a class=\\"squiffy-link link-section\\" data-section=\\"two\\" role=\\"link\\" tabindex=\\"0\\">2</a>.\\n",
        "attributes": [
            "my_string = some text"
        ]
    },
    "one": {
        "text": "Maybe you'd like it to be <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">3</a> instead? Or you could just <a class=\\"squiffy-link link-section\\" data-section=\\"next\\" role=\\"link\\" tabindex=\\"0\\">continue...</a>\\n",
        "attributes": [
            "my_attribute = 1"
        ],
        "passages": {
            "three": {
                "text": "OK. Three it is.\\n",
                "attributes": [
                    "my_attribute = 3",
                    "chose_passage"
                ]
            }
        }
    },
    "two": {
        "text": "Maybe you'd like it to be <a class=\\"squiffy-link link-passage\\" data-passage=\\"four\\" role=\\"link\\" tabindex=\\"0\\">4</a> instead? You could try <a class=\\"squiffy-link link-passage\\" data-passage=\\"javascript\\" role=\\"link\\" tabindex=\\"0\\">javascript</a>. Or you could just <a class=\\"squiffy-link link-section\\" data-section=\\"next\\" role=\\"link\\" tabindex=\\"0\\">continue...</a>\\n",
        "attributes": [
            "my_attribute = 2"
        ],
        "passages": {
            "javascript": {
                "text": "",
                "jsIndex": 0
            },
            "four": {
                "text": "OK. Four it is.\\n",
                "attributes": [
                    "my_attribute = 4",
                    "chose_passage"
                ]
            }
        }
    },
    "next": {
        "text": "my_attribute = {my_attribute}\\n\\nAlso, my_string = \\"{my_string}\\"\\n\\nDid you choose a passage link? {if chose_passage:yes}{else:no} <a class=\\"squiffy-link link-passage\\" data-passage=\\"unset\\" role=\\"link\\" tabindex=\\"0\\">unset</a>\\n\\nClick some more links: <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"d\\" role=\\"link\\" tabindex=\\"0\\">d</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"e\\" role=\\"link\\" tabindex=\\"0\\">e</a> and then click <a class=\\"squiffy-link link-section\\" data-section=\\"done\\" role=\\"link\\" tabindex=\\"0\\">done</a>.\\n",
        "passages": {
            "unset": {
                "text": "Now the value is: {if chose_passage:yes}{else:no}\\n",
                "attributes": [
                    "not chose_passage"
                ]
            },
            "a": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "b": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "c": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "d": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "e": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            }
        }
    },
    "done": {
        "text": "You clicked {count} links. What about calling <a class=\\"squiffy-link link-passage\\" data-passage=\\"dec\\" role=\\"link\\" tabindex=\\"0\\">dec</a>?\\n",
        "passages": {
            "dec": {
                "text": "Now count is {count}. You can also <a class=\\"squiffy-link link-passage\\" data-passage=\\"increase\\" role=\\"link\\" tabindex=\\"0\\">increase</a> or <a class=\\"squiffy-link link-passage\\" data-passage=\\"decrease\\" role=\\"link\\" tabindex=\\"0\\">decrease</a> by values other than 1.\\n",
                "attributes": [
                    "count-=1"
                ]
            },
            "increase": {
                "text": "Now count is {count}.\\n",
                "attributes": [
                    "count+=10"
                ]
            },
            "decrease": {
                "text": "Now count is {count}.",
                "attributes": [
                    "count-=5"
                ]
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		alert("my_attribute " + get("my_attribute"));
	},
];"
`;

exports[`clearscreen/clearscreen.squiffy 1`] = `
"export const story = {};
story.id = "clearscreen.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<a class=\\"squiffy-link link-passage\\" data-passage=\\"one\\" role=\\"link\\" tabindex=\\"0\\">This link</a> doesn't clear the screen. But <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">this link</a> does.\\n",
        "passages": {
            "one": {
                "text": "This text is on the same screen.\\n"
            },
            "two": {
                "clear": true,
                "text": "This text is on a new screen. This <a class=\\"squiffy-link link-section\\" data-section=\\"same page\\" role=\\"link\\" tabindex=\\"0\\">section</a> will be on the same screen, and this <a class=\\"squiffy-link link-section\\" data-section=\\"clear section\\" role=\\"link\\" tabindex=\\"0\\">section</a> clears the screen.\\n"
            }
        }
    },
    "same page": {
        "text": "This section is on the same screen.\\n"
    },
    "clear section": {
        "clear": true,
        "text": "Another new page."
    }
};
story.js = [
];"
`;

exports[`continue/continue.squiffy 1`] = `
"export const story = {};
story.id = "continue.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Here is some text.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue1\\" role=\\"link\\" tabindex=\\"0\\">Continue...</a>"
    },
    "_continue1": {
        "text": "More text.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue2\\" role=\\"link\\" tabindex=\\"0\\">Carry on further...</a>"
    },
    "_continue2": {
        "text": "There's some more text now.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue3\\" role=\\"link\\" tabindex=\\"0\\">Keep walking!</a>"
    },
    "_continue3": {
        "text": "Oh, even more text appeared!\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue4\\" role=\\"link\\" tabindex=\\"0\\">A little closer...</a>"
    },
    "_continue4": {
        "text": "Pretty scary.",
        "jsIndex": 0
    }
};
story.js = [
	(squiffy, get, set) => {
		alert("BOO!")
	},
];"
`;

exports[`helloworld/helloworld.squiffy 1`] = `
"export const story = {};
story.id = "helloworld.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Hello, world!"
    }
};
story.js = [
];"
`;

exports[`import/test.squiffy 1`] = `
"export const story = {};
story.id = "test.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Text from file 1.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue1\\" role=\\"link\\" tabindex=\\"0\\">Continue...</a>"
    },
    "_continue1": {
        "text": "<a class=\\"squiffy-link link-section\\" data-section=\\"file2\\" role=\\"link\\" tabindex=\\"0\\">Go to file 2</a>\\n"
    },
    "file2": {
        "text": "Text from file 2.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue2\\" role=\\"link\\" tabindex=\\"0\\">Continue from here...</a>"
    },
    "_continue2": {
        "text": "Now run the <a class=\\"squiffy-link link-passage\\" data-passage=\\"test\\" role=\\"link\\" tabindex=\\"0\\">test</a> function.\\n",
        "passages": {
            "test": {
                "text": "",
                "jsIndex": 0
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		test();
	},
];"
`;

exports[`last/last.squiffy 1`] = `
"export const story = {};
story.id = "last.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Test section with some passages. <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.\\n",
        "passageCount": 3,
        "passages": {
            "a": {
                "text": "Passage A.\\n"
            },
            "b": {
                "text": "Passage B.\\n"
            },
            "c": {
                "text": "Passage C.\\n"
            },
            "@last": {
                "text": "You saw all passages! Now go to the <a class=\\"squiffy-link link-section\\" data-section=\\"section2\\" role=\\"link\\" tabindex=\\"0\\">next section</a>.\\n"
            }
        }
    },
    "section2": {
        "text": "Second test. <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.\\n",
        "passageCount": 3,
        "passages": {
            "": {
                "text": "Master passage.\\n"
            },
            "a": {
                "text": "Passage A.\\n"
            },
            "b": {
                "text": "Passage B.\\n"
            },
            "c": {
                "text": "Passage C.\\n"
            },
            "@last": {
                "text": "You saw all passages!"
            }
        }
    }
};
story.js = [
];"
`;

exports[`master/master.squiffy 1`] = `
"export const story = {};
story.id = "master.squiffy";
story.start = "intro";
story.sections = {
    "": {
        "text": "This text appears before each section in the game.\\n",
        "passages": {
            "": {
                "text": "",
                "jsIndex": 0
            }
        }
    },
    "intro": {
        "text": "This is the first section.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue1\\" role=\\"link\\" tabindex=\\"0\\">Continue...</a>"
    },
    "_continue1": {
        "text": "This is the second section. <a class=\\"squiffy-link link-passage\\" data-passage=\\"One\\" role=\\"link\\" tabindex=\\"0\\">One</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">two</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">three</a>. <a class=\\"squiffy-link link-section\\" data-section=\\"Next!\\" role=\\"link\\" tabindex=\\"0\\">Next!</a>\\n",
        "passages": {
            "": {
                "text": "This text appears before each passage in this section.\\n",
                "jsIndex": 1
            },
            "One": {
                "text": "1...\\n"
            },
            "two": {
                "text": "2...\\n"
            },
            "three": {
                "text": "3...\\n"
            }
        }
    },
    "Next!": {
        "text": "Final section, no master passages here. <a class=\\"squiffy-link link-passage\\" data-passage=\\"See\\" role=\\"link\\" tabindex=\\"0\\">See</a>.\\n",
        "passages": {
            "See": {
                "text": "The end..."
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		console.log("This JS runs for each passage in the entire game.")
	},
	(squiffy, get, set) => {
		console.log("This JS runs for each passage in the second section.");
	},
];"
`;

exports[`replace/replace.squiffy 1`] = `
"export const story = {};
story.id = "replace.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "I {label:1=walked} to the shops and I bought {label:2=a pint of milk}.\\n\\nBut then I thought, hang on, I <a class=\\"squiffy-link link-passage\\" data-passage=\\"next, @replace 2=beer\\" role=\\"link\\" tabindex=\\"0\\">don't really like milk</a>.\\n",
        "passages": {
            "beer": {
                "text": "a <a class=\\"squiffy-link link-passage\\" data-passage=\\"crate of beer\\" role=\\"link\\" tabindex=\\"0\\">crate of beer</a>\\n"
            },
            "crate of beer": {
                "text": "Yes, beer.\\n"
            },
            "next": {
                "text": "And then I thought, hang on, I {label:3=<a class=\\"squiffy-link link-passage\\" data-passage=\\"@replace 1=teleported, @replace 3=love teleporting\\" role=\\"link\\" tabindex=\\"0\\">hate walking</a>}.\\n"
            },
            "love teleporting": {
                "text": "love teleporting, so much I might <a class=\\"squiffy-link link-section\\" data-section=\\"section2\\" role=\\"link\\" tabindex=\\"0\\">embark on a wild and crazy adventure</a>\\n"
            }
        }
    },
    "section2": {
        "text": "And so it {label:4=began...}\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"section3\\" role=\\"link\\" tabindex=\\"0\\">Or did it?</a>\\n"
    },
    "section3": {
        "text": "Oh well.\\n",
        "attributes": [
            "@replace 4=ended <a class=\\"squiffy-link link-passage\\" data-passage=\\"abruptly\\" role=\\"link\\" tabindex=\\"0\\">abruptly</a>."
        ],
        "passages": {
            "abruptly": {
                "text": "That is all."
            }
        }
    }
};
story.js = [
];"
`;

exports[`rotate/rotate.squiffy 1`] = `
"export const story = {};
story.id = "rotate.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Choose a number: {rotate:one:two:three}\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue1\\" role=\\"link\\" tabindex=\\"0\\">OK...</a>"
    },
    "_continue1": {
        "text": "Now {rotate result:four:five:six}\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue2\\" role=\\"link\\" tabindex=\\"0\\">OK...</a>"
    },
    "_continue2": {
        "text": "You chose {result}.\\n\\nNow for a sequence: {sequence:one:two:three:four:five}.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue3\\" role=\\"link\\" tabindex=\\"0\\">And another...</a>"
    },
    "_continue3": {
        "text": "Another sequence: {sequence seqresult:a:b:c:d:e:f:g}.\\n\\n<a class=\\"squiffy-link link-section\\" data-section=\\"_continue4\\" role=\\"link\\" tabindex=\\"0\\">Finally...</a>"
    },
    "_continue4": {
        "text": "You chose {seqresult}.\\n\\nHere's a sequence that links to another section. {sequence:Ready...:Steady...:<a class=\\"squiffy-link link-section\\" data-section=\\"Go!\\" role=\\"link\\" tabindex=\\"0\\">Go!</a>}\\n"
    },
    "Go!": {
        "text": "That's all folks!"
    }
};
story.js = [
];"
`;

exports[`sectiontrack/sectiontrack.squiffy 1`] = `
"export const story = {};
story.id = "sectiontrack.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Choose: <a class=\\"squiffy-link link-section\\" data-section=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-section\\" data-section=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-section\\" data-section=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>. Or read this <a class=\\"squiffy-link link-passage\\" data-passage=\\"note\\" role=\\"link\\" tabindex=\\"0\\">note</a>.\\n",
        "passages": {
            "note": {
                "text": "This is a passage.\\n"
            }
        }
    },
    "a": {
        "text": "Now choose <a class=\\"squiffy-link link-section\\" data-section=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a> or <a class=\\"squiffy-link link-section\\" data-section=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.\\n"
    },
    "b": {
        "text": "Now go to <a class=\\"squiffy-link link-section\\" data-section=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.\\n"
    },
    "c": {
        "text": "{if seen a:You saw A.}{else:You didn't see A.}\\n{if not seen b:You didn't see B.}{else:You saw B.}\\n\\n{if seen note:You looked at the note.}{else:You didn't look at the note.}"
    }
};
story.js = [
];"
`;

exports[`start/start.squiffy 1`] = `
"export const story = {};
story.id = "start.squiffy";
story.start = "the start section";
story.sections = {
    "not the start section": {
        "text": "This is page 2, although it was defined first.\\n"
    },
    "the start section": {
        "text": "This is the start section. We also defined a section called <a class=\\"squiffy-link link-section\\" data-section=\\"not the start section\\" role=\\"link\\" tabindex=\\"0\\">not the start section</a>."
    }
};
story.js = [
];"
`;

exports[`test/example.squiffy 1`] = `
"export const story = {};
story.id = "example.squiffy";
story.start = "Introduction";
story.sections = {
    "Introduction": {
        "text": "# Squiffy Test\\nThis is [a website link](http://textadventures.co.uk).\\n\\nThis should be <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage\\" role=\\"link\\" tabindex=\\"0\\">a link to a passage</a>. Here's <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage2\\" role=\\"link\\" tabindex=\\"0\\">another one</a>.\\n\\nYou don't need to specify a name - for example, this <a class=\\"squiffy-link link-passage\\" data-passage=\\"link\\" role=\\"link\\" tabindex=\\"0\\">link</a> and this <a class=\\"squiffy-link link-section\\" data-section=\\"section\\" role=\\"link\\" tabindex=\\"0\\">section</a>.\\n\\nAnd this goes to the <a class=\\"squiffy-link link-section\\" data-section=\\"section2\\" role=\\"link\\" tabindex=\\"0\\">next section</a>.\\n\\nThis line has links to <a class=\\"squiffy-link link-section\\" data-section=\\"section 3\\" role=\\"link\\" tabindex=\\"0\\">section 3</a> and <a class=\\"squiffy-link link-section\\" data-section=\\"section four\\" role=\\"link\\" tabindex=\\"0\\">section 4</a>.\\n\\nThis line has links to <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage 3\\" role=\\"link\\" tabindex=\\"0\\">passage 3</a> and <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage four\\" role=\\"link\\" tabindex=\\"0\\">passage 4</a>.\\n\\nOh look - <a class=\\"squiffy-link link-passage\\" data-passage=\\"it's a passage with an apostrophe\\" role=\\"link\\" tabindex=\\"0\\">it's a passage with an apostrophe</a>.\\n",
        "passages": {
            "passage": {
                "text": "Here's some text for the passage.\\n"
            },
            "passage2": {
                "text": "This is the text for the second passage.\\n",
                "jsIndex": 0
            },
            "passage 3": {
                "text": "Another passage.\\n"
            },
            "passage four": {
                "text": "Yet another passage.\\n"
            },
            "link": {
                "text": "Here is the text for the simple link.\\n"
            },
            "it's a passage with an apostrophe": {
                "text": "Nothing to worry about.\\n"
            }
        }
    },
    "section2": {
        "text": "This is the next section, with passages <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a> and <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>.\\n",
        "jsIndex": 1,
        "passages": {
            "a": {
                "text": "Just a.\\n"
            },
            "b": {
                "text": "Just b.\\n"
            }
        }
    },
    "section": {
        "text": "This is another section, with passages <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a> and <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>.\\n",
        "passages": {
            "a": {
                "text": "Just a in a different section.\\n"
            },
            "b": {
                "text": "Just b in a different section.\\n"
            }
        }
    },
    "section 3": {
        "text": "Another section is here, with passages <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a> and <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>.\\n",
        "passages": {
            "a": {
                "text": "Just a in section3.\\n"
            },
            "b": {
                "text": "Just b in section3.\\n"
            }
        }
    },
    "section four": {
        "text": "Some other section, with passages <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a> and <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>.\\n",
        "passages": {
            "a": {
                "text": "Just a in section four.\\n"
            },
            "b": {
                "text": "Just b in section four."
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		alert ("This passage has some JavaScript");
	},
	(squiffy, get, set) => {
		alert ("This section has some JavaScript");
	},
];"
`;

exports[`textprocessor/textprocessor.squiffy 1`] = `
"export const story = {};
story.id = "textprocessor.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Choose a gender:\\n\\n* <a class=\\"squiffy-link link-section\\" data-section=\\"start, gender=male\\" role=\\"link\\" tabindex=\\"0\\">Male</a>\\n* <a class=\\"squiffy-link link-section\\" data-section=\\"start, gender=female\\" role=\\"link\\" tabindex=\\"0\\">Female</a>\\n"
    },
    "start": {
        "text": "You chose {gender}.\\n\\n{if gender=male:You are a man.}\\n{else:You are a woman.}\\n\\n<a class=\\"squiffy-link link-passage\\" data-passage=\\"Next\\" role=\\"link\\" tabindex=\\"0\\">Next</a>\\n",
        "passages": {
            "Next": {
                "text": "This is a test. {passage} {section}\\n"
            },
            "passage": {
                "text": "Text from passage.\\n"
            }
        }
    },
    "section": {
        "text": "Text from section."
    }
};
story.js = [
];"
`;

exports[`transitions/transitions.squiffy 1`] = `
"export const story = {};
story.id = "transitions.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "You are standing in a room. You can see a <a class=\\"squiffy-link link-passage\\" data-passage=\\"hammer\\" role=\\"link\\" tabindex=\\"0\\">hammer</a>.\\n",
        "passages": {
            "hammer": {
                "text": "It's nice and weighty. Perhaps you want to <a class=\\"squiffy-link link-section\\" data-section=\\"hit\\" role=\\"link\\" tabindex=\\"0\\">hit yourself in the face with it</a>?\\n"
            }
        }
    },
    "hit": {
        "text": "Bang.\\n",
        "jsIndex": 0
    },
    "wake up": {
        "clear": true,
        "text": "Slowly your eyes open.\\n\\nThat was a rather stupid thing to do."
    }
};
story.js = [
	(squiffy, get, set) => {
		squiffy.ui.transition(function(){
			// Create a blackout <div>...
			$("<div/>", {
				id: "blackout"
			}).css({
				position: "fixed",
				top: 0,
				left: 0,
				width: "100%",
				height: "100%",
				background: "black",
				display: "none"
			}).appendTo("body");
			// Fade it in over 6 seconds...
			$("#blackout").fadeIn({
				duration: 6000,
				easing: "easeInQuad",
			});
			// After fading it in...
			setTimeout(function () {
				// Move to the next section...
				squiffy.story.go("wake up");
				// Fade out the blackout and remove the <div>...
				$("#blackout").fadeOut({
					duration: 6000,
					easing: "easeInQuad",
					complete: function() {
						$(this).remove();
					}
				});
			}, 9000);
		});
		
	},
];"
`;

exports[`turncount/turncount.squiffy 1`] = `
"export const story = {};
story.id = "turncount.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "After clicking two links in this section, an additional passage will be displayed.\\n\\n<a class=\\"squiffy-link link-passage\\" data-passage=\\"One\\" role=\\"link\\" tabindex=\\"0\\">One</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">two</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">three</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"four\\" role=\\"link\\" tabindex=\\"0\\">four</a>.\\n",
        "passages": {
            "One": {
                "text": "First passage.\\n"
            },
            "two": {
                "text": "Second passage.\\n"
            },
            "three": {
                "text": "Third passage.\\n"
            },
            "four": {
                "text": "Fourth passage.\\n"
            },
            "@2": {
                "text": "This is some extra text to appear after the second click. The <a class=\\"squiffy-link link-section\\" data-section=\\"next section\\" role=\\"link\\" tabindex=\\"0\\">next section</a> is also good.\\n"
            }
        }
    },
    "next section": {
        "text": "In this section, you can only click one link, and then you'll be taken to the final section.\\n\\n<a class=\\"squiffy-link link-passage\\" data-passage=\\"One\\" role=\\"link\\" tabindex=\\"0\\">One</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">two</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">three</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"four\\" role=\\"link\\" tabindex=\\"0\\">four</a>.\\n",
        "passages": {
            "One": {
                "text": "First passage.\\n"
            },
            "two": {
                "text": "Second passage.\\n"
            },
            "three": {
                "text": "Third passage.\\n"
            },
            "four": {
                "text": "Fourth passage.\\n"
            },
            "@1": {
                "text": "",
                "jsIndex": 0
            }
        }
    },
    "final section": {
        "text": "**THE END**"
    }
};
story.js = [
	(squiffy, get, set) => {
		squiffy.story.go("final section");
	},
];"
`;

exports[`warnings/warnings.squiffy 1`] = `
[
  "WARNING: warnings.squiffy line 1: In section '_default' there is a link to a section called [[badsection2]], which doesn't exist",
  "WARNING: warnings.squiffy line 1: In section '_default' there is a link to a section called [[badsection]], which doesn't exist",
  "WARNING: warnings.squiffy line 9: In section 'section' there is a link to a passage called [badpassage2], which doesn't exist",
  "WARNING: warnings.squiffy line 9: In section 'section' there is a link to a passage called [badpassage], which doesn't exist",
  "WARNING: warnings.squiffy line 19: In section 'section', passage 'passage' there is a link to a passage called [non-existent passage], which doesn't exist",
]
`;

exports[`warnings/warnings2.squiffy 1`] = `
[
  "WARNING: warnings2.squiffy line 1: In section 'test' there is a link to a passage called [doesn't exist], which doesn't exist",
]
`;
